# gnome-shell-extension-bugzilla

./: .gitignore  AUTHORS  Makefile.am  README  configure.ac  extension.js  metadata.json
